<resources>
    <string name="app_name">eTesting</string>
    <string name="field_login">Login</string>
    <string name="field_pass">Senha</string>
    <string name="button_in">Entrar</string>
    <string name="no_register">Não tem cadastro? Cadastre-se.</string>
    <string name="login_success">Login efetuado com sucesso!</string>
    <string name="preferences">com.luizmagno.etesting.preferences</string>
    <string name="logon">logon</string>
    <string name="miss_login">Login não pode ser vazio!</string>
    <string name="miss_pass">Senha não pode ser vazia!</string>
    <string name="field_pass_again">Repetir senha</string>
    <string name="do_it_login">Já é cadastrado? Faça o login.</string>
    <string name="button_register">Cadastrar</string>
    <string name="register_success">Cadastrado com sucesso!</string>
    <string name="pass_dif">Senhas não são iguais!</string>
    <string name="img_collapse_desc">Imagem de fundo contendo uma mesa de escritório com pc e livros</string>
    <string name="title_toolbar">Minhas Provas</string>
    <string name="example_test">Teste Exemplo</string>
    <string name="date_test">25 Ago 1985</string>
    <string name="start_at">Inicia às 00:00</string>
    <string name="menu_logout">Sair</string>
    <string name="menu_about">Sobre</string>
    <string name="to_do_test">Fazer Teste</string>
    <string name="really_to_do_test">Deseja realmente realizar essa prova? Em caso afirmativo você não poderá sair da aplicação. Se sair a prova se encerrará automaticamente.</string>
    <string name="positive">Vamos lá</string>
    <string name="negative">Agora não</string>
    <string name="question">Questão 01</string>
    <string name="img_of_question">Imagem da questão</string>
    <string name="example_of_question_1">A respeito dos diversos tipos de equipamentos de rede, assinale a alternativa que indica corretamente o nome do equipamento de rede capaz de realizar uma conexão entre diferentes redes de modo a permitir a troca de informações entre elas, mas que seja capaz também de controlar o fluxo da informação, possibilitando, por exemplo, a criação de rotas mais curtas e rápidas.</string>
    <string name="res">Imagem da questão</string>
    <string name="example_num_q">10 Questões</string>
</resources>