<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity"
    android:padding="@dimen/pad_layout">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleQuestionId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_box_title_question"
                android:background="@color/background_box_title_question"
                android:padding="@dimen/pad_title_question"
                android:text="@string/question"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/size_title_question"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgQuestionId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_margin="@dimen/pad_image_question"
                android:src="@drawable/collapse"
                android:contentDescription="@string/img_of_question"/>

            <TextView
                android:id="@+id/textOfQuestionId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="@dimen/pad_text_question"
                android:text="@string/example_of_question_1"/>

            <include layout="@layout/radio_buttons_group" />
        </LinearLayout>




    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>